# vscode_init

./: .markdownlint.json  LICENSE  Makefile  README.md  append_alias.sh  copy_tasks.sh  init_cpp_project.sh  init_cproject.sh  init_shared_lib_cproject.sh
c_shared_lib/: .gitignore  Makefile  main.c
c_shared_lib/my_lib/: mylib.h
c_src/: Makefile  main.c
cpp_src/: Makefile  main.cpp
docs/: CROSS.md
hooks/: pre-commit
img/: vsc_init.webm
share/vscode_init/c_shared_lib/: Makefile
share/vscode_init/c_shared_lib/my_lib/: mylib.c
share/vscode_init/cpp_src/: Makefile  main.cpp
share/vscode_init/macos/arm/make/: launch.json
share/vscode_init/macos/arm/meson/: launch.json
share/vscode_init/tpl_c_lib_make/: .gitignore  Makefile  main.c
share/vscode_init/tpl_c_lib_make/my_lib/: mylib.h
share/vscode_init/tpl_c_make/: Makefile  common.h  main.c
share/vscode_init/tpl_c_meson/: .gitignore  Makefile  main.c  meson.build
share/vscode_init/tpl_cpp_make/: .gitignore  Makefile  main.cpp
share/vscode_init/tpl_vscode_make/: settings.json
share/vscode_init/tpl_vscode_meson/: launch.json  settings.json  tasks.json
share/vscode_init/workspace_settings/: settings.json
test/: test_vscode_init.sh
utils/: append_alias.sh  copy_tasks.sh  setuprepo.sh
vscode/: launch.json  tasks.json
vscode_init/cpp_src/: .clang-format
vscode_init/vscode/: launch.json
